--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Product 1</h5>
-                        <img src=img/ alt="apple" style="width:100%">
+                        <img src= /img/apple-g0a65cf3cf_1920.jpg alt="apple" style="width:100%">
                         <p class="card-text">$10</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
@@ -28,7 +28,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-body">
+                    <div class="text-justify ...">
                         <h5 class="card-title">Product 2</h5>
                         <p class="card-text">$20</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
