change product name to apple

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Product 1</h5>
+                        <h5 class="card-title">apple</h5>
                         <img src= /img/apple-g0a65cf3cf_1920.jpg alt="apple" style="width:100%">
                         <p class="card-text">$10</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
@@ -29,8 +29,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="text-justify ...">
-                        <h5 class="card-title">Product 2</h5>
-                        <p class="card-text">$20</p>
+                        <h5 class="card-title">apple</h5>
+                        <p class="card-text">$15</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
@@ -38,8 +38,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
-                        <p class="card-text">$30</p>
+                        <h5 class="card-title">apple</h5>
+                        <p class="card-text">$20</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
@@ -49,8 +49,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Product 4</h5>
-                        <p class="card-text">$40</p>
+                        <h5 class="card-title">apple</h5>
+                        <p class="card-text">$25</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
@@ -58,8 +58,8 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Product 5</h5>
-                        <p class="card-text">$50</p>
+                        <h5 class="card-title">apple</h5>
+                        <p class="card-text">$30</p>
                         <a href="#" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
